force-app/main/default/objects/SIC_Code_Translation__mdt/SIC_Code_Translation__mdt.object-meta.xml
<CustomObject>
    <description>Converts the SIC Code to a text description

https://github.com/companieshouse/api-enumerations/blob/master/constants.yml</description>
    <label>SIC Code Translation</label>
    <pluralLabel>SIC Codes Translations</pluralLabel>
</CustomObject>