force-app/main/default/objects/SIC_Code_Translation__mdt/fields/SIC_Code__c.field-meta.xml
<CustomField>
    <fullName>SIC_Code__c</fullName>
    <description>Sic Code</description>
    <label>SIC Code</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>