force-app/main/default/objects/SIC_Code_Translation__mdt/fields/SIC_Code_and_Description__c.field-meta.xml
<CustomField>
    <fullName>SIC_Code_and_Description__c</fullName>
    <description>A concatenated value of the SIC Code and Description</description>
    <label>SIC Code and Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>