force-app/main/default/objects/SIC_Code_Translation__mdt/fields/SIC_Description__c.field-meta.xml
<CustomField>
    <fullName>SIC_Description__c</fullName>
    <description>Text description of the SIC code</description>
    <label>SIC Description</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>