force-app/main/default/objects/SIC_Code_Translation__mdt/listViews/View_All.listView-meta.xml
<ListView>
    <fullName>View_All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>SIC_Code__c</columns>
    <columns>SIC_Description__c</columns>
    <columns>IsProtected</columns>
    <filterScope>Everything</filterScope>
    <label>View All</label>
</ListView>